<resources>
    <string name="app_name">Risuscit&#242;</string>
    <string name="action_about">About</string>
    <string name="action_favourites">Preferiti</string>
    <string name="action_share">Condividi</string>
    <string name="letter_order_text">Indice alfabetico</string>
    <string name="page_order_text">Indice per pagina</string>
    <string name="search_name_text">Ricerca canto</string>
    <string name="arg_search_text">Indice per argomento</string>
    <string name="list_result_title">Risultati della ricerca:</string>
    <string name="args_result_title">Elenco degli argomenti</string>
    <string name="button_pulisci">PULISCI</string>
    <string name="button_clean_list">Pulisci lista</string>
    <string name="always_on">No standby</string>
    <string name="always_on_summary">Impedisce allo schermo di andare in standby all\'interno dell\'applicazione.</string>
    <string name="title_activity_favourites">Preferiti</string>
    <string name="no_favourites">Non è presente nessun preferito. Per aggiungere un canto alla lista dei preferiti, clicca sul cuore presente nella pagina del canto stesso.</string>
    <string name="title_activity_ricerca_titolo">Ricerca per titolo</string>
    <string name="search_hint">Digita almeno 3 caratteri&#8230;</string>
    <string name="search_no_results">Nessun risultato corrispondente ai criteri di ricerca digitati.</string>
    <string name="title_activity_settings">Impostazioni</string>
    <string name="favourite_remove">Rimuovi dai preferiti</string>
    <string name="list_remove">Rimuovere dalla lista?</string>
    <string name="hint_remove">Tieni premuto su un elemento per rimuoverlo dalla lista</string>
    <string name="title_activity_general_index">Indici dei canti</string>
    <string name="default_index_title">Indice predefinito</string>
    <string name="default_index_summary">Indica quale indice deve aprirsi per default alla selezione della pagina degli indici.</string>
    <string name="title_activity_canti_parola">Celebrazione della parola</string>
    <string name="canto_iniziale">Canto iniziale</string>
    <string name="prima_lettura">In risposta alla prima lettura</string>
    <string name="seconda_lettura">In risposta alla seconda lettura</string>
    <string name="terza_lettura">In risposta alla terza lettura</string>
    <string name="canto_fine">Canto finale</string>
    <string name="select_canto">Aggiungi canto</string>
    <string name="reset_list_question">Sei sicuro di voler resettare la lista?</string>
    <string name="title_activity_canti_eucarestia">Celebrazione dell\'Eucarestia</string>
    <string name="canto_pace">Alla pace</string>
    <string name="canto_pane">Alla frazione del pane</string>
    <string name="canto_vino">Al vino</string>
    <string name="title_activity_custom_lists">Liste personalizzate</string>
    <string name="copertina">copertina</string>
    <string name="add_inizio">Aggiungi canto iniziale</string>
    <string name="add_prima">Aggiungi canto alla prima lettura</string>
    <string name="add_seconda">Aggiungi canto alla seconda lettura</string>
    <string name="add_terza">Aggiungi canto alla terza lettura</string>
    <string name="add_fine">Aggiungi canto finale</string>
    <string name="add_pace">Aggiungi canto alla pace</string>
    <string name="add_pane">Aggiungi canto alla frazione del pane</string>
    <string name="add_vino">Aggiungi canto al vino</string>
    <string name="title_activity_inserisci_titolo">Ricerca per inserimento</string>
	<string name="title_activity_about">Changelog</string>
    <string name="play_song">riproduci</string>
    <string name="fast_forward">avanti veloce</string>
    <string name="rewind">indietro veloce</string>
    <string name="delete">elimina file locale</string>
    <string name="save_file">salva in locale</string>
    <string name="stop_song">ferma</string>
    <string name="pause_song">pausa</string>
    <string name="wait">Attendi, buffering in corso&#8230;</string>
    <string name="no_connection">Nessuna connessione ad internet attiva!</string>
    <string name="no_record">Registrazione non presente!</string>
    <string name="about_subtitle">Versione per smartphone/tablet Android</string>
    <string name="search_text_also">cerca anche nel testo</string>
    <string name="dialog_download_mp3">Vuoi salvare il brano nel dispositivo? Potrai riascoltarlo da qui senza connessione internet!</string>
	<string name="dialog_delete_mp3">Sei sicuro di voler cancellare il brano dalla memoria del dispositivo?</string>
	<string name="confirm">SI</string>
    <string name="dismiss">NO</string>
    <string name="cancel">ANNULLA</string>
    <string name="save_location_title">Memoria predefinita</string>
    <string name="save_location_summary">Indica se vuoi rendere i file scaricati visibili alle altre applicazioni (per es. lettore musicale).</string>
    <string name="favorite_added">Aggiunto ai preferiti!</string>
    <string name="favorite_removed">Rimosso dai preferiti!</string>
    <string name="file_delete">File cancellato!</string>
    <string name="download_completed">File salvato!</string>
    <string name="download_running">Download in corso&#8230;</string>
    <string name="download_cancelled">Download annullato!</string>
    <string name="present_yet">Canto già presente!</string>
    <string name="dialog_present_yet">&#200; già presente il canto: </string>
    <string name="dialog_wonna_replace">. Vuoi sostituirlo?</string>
    <string name="fast_search_title">Ricerca veloce</string>
    <string name="advanced_search_title">Ricerca avanzata</string>
    <string name="title_activity_search">Ricerca canto</string>
    <string name="button_search">CERCA</string>
    <string name="search_running">Ricerca in corso&#8230;</string>
    <string name="advanced_search_subtitle">CERCA NEL TITOLO E NEL TESTO</string>
    <string name="fast_search_subtitle">CERCA PER TITOLO</string>
    <string name="show_seconda_title">Eucarestia 2^ lettura</string>
    <string name="show_seconda_summary">Abilita il canto in risposta alla seconda lettura per l\'Eucarestia</string>
    <string name="action_add_list">Nuova lista</string>
    <string name="action_remove_list">Elimina lista</string>
    <string name="action_edit_list">Modifica lista</string>
    <string name="title_activity_nuova_lista">Nuova lista</string>
    <string name="list_save_exit">Salva ed esci</string>
    <string name="add_position">Aggiungi elemento</string>
    <string name="content_drag">trascina elemento</string>
   	<string name="aggiungi_confirm">AGGIUNGI</string>
    <string name="aggiungi_dismiss">ANNULLA</string>
    <string name="titolo_pos_vuoto">Nessun titolo inserito!</string>
    <string name="posizione_add_desc">Titolo del nuovo elemento</string>
    <string name="lista_pers_piena">Il numero massimo di elementi consentito è di 20!</string>
    <string name="lista_pers_vuota">La lista è vuota!</string>
    <string name="aggiungi_lista_crea">CREA</string>
    <string name="lista_add_desc">Titolo della nuova lista:</string>
    <string name="save_list_question">Stai per uscire dalla creazione della lista personalizzata. Vuoi salvare le modifiche?</string>
    <string name="action_help">Aiuto</string>
    <string name="dialog_chiudi">OK</string>
    <string name="dialog_help_title">Aiuto</string>
    <string name="dialog_change_title">Novit&#224;</string>
    <string name="action_tonalita">Tonalit&#224;</string>
    <string name="action_trasporta">Cambia</string>
    <string name="action_salva_tonalita">Salva</string>
    <string name="action_reset_tonalita">Predefinita</string>
    <string name="action_trasporta_do">Do / Do-</string>
    <string name="action_trasporta_dod">Do# / Do#-</string>
    <string name="action_trasporta_re">Re / Re-</string>
    <string name="action_trasporta_mib">Mib / Mib-</string>
    <string name="action_trasporta_mi">Mi / Mi-</string>
    <string name="action_trasporta_fa">Fa / Fa-</string>
    <string name="action_trasporta_fad">Fa# / Fa#-</string>
    <string name="action_trasporta_sol">Sol / Sol-</string>
    <string name="action_trasporta_sold">Sol# / Sol#-</string>
    <string name="action_trasporta_la">La / La-</string>
    <string name="action_trasporta_sib">Sib / Sib-</string>
    <string name="action_trasporta_si">Si / Si-</string>
    <string name="dialog_save_tab">Vuoi salvare la tonalit&#224; e il barr&#232; usati?</string>
	<string name="showcase_chtab_desc">Trasporta gli accordi del canto nella tonalit&#224; desiderata.</string>
    <string name="showcase_savetab_desc">Salva la tonalit&#224; impostata, in modo da averla sempre ad ogni apertura del canto.</string>
    <string name="showcase_restab_desc">Fa tornare il canto alla tonalit&#224; predefinita nel Risuscit&#242;.</string>
    <string name="showcase_button_next">AVANTI</string>
    <string name="showcase_help_general">Puoi rivedere questi suggerimenti scegliendo la voce di menù \"Aiuto\".</string>
    <string name="tab_saved">Tonalit&#224; salvata!</string>
    <string name="barre_saved">Posizione del barr&#232; salvata!</string>
    <string name="tab_not_saved">Non hai cambiato la tonalit&#224;!</string>
    <string name="barre_not_saved">Non hai cambiato la posizione del barr&#232;!</string>
    <string name="showcase_end_title">Fine</string>
    <string name="list_added">Aggiunto alla lista!</string>
    <string name="posizione_rename">Rinomina elemento</string>
    <string name="showcase_welcome_crea">Benvenuto. Da qui puoi creare/modificare la tua lista personalizzata per qualsiasi celebrazione.</string>
    <string name="showcase_add_pos_desc">Con questo pulsante puoi aggiungere un nuovo elemento a piacere (es. \"Canto iniziale\", \"prima lettura\", etc.).
        Puoi aggiungere fino a 30 elementi.</string>
    <string name="posizione_reorder">Riordina gli elementi</string>
    <string name="showcase_reorder_desc">Una volta creati pi&#249; elementi, trascinandoli verso l\'alto o verso il basso, puoi riordinarli come preferisci.</string>
    <string name="showcase_rename_desc">Tieni premuto sul nome di un elemento per rinominarlo.</string>
    <string name="showcase_saveexit_desc">Una volta finito, premi qui per salvare e vedere la tua lista assieme alle altre.</string>
    <string name="posizione_delete">Elimina l\'elemento</string>
    <string name="showcase_delete_desc">Fai scorrere a destra o a sinistra per rimuovere un elemento.</string>
    <string name="action_barre">Barr&#232;</string>
    <string name="action_reset_barre">Predefinito</string>
    <string name="action_trabar_NO">Senza barrè</string>
    <string name="action_trabar_I">al I° tasto</string>
    <string name="action_trabar_II">al II° tasto</string>
    <string name="action_trabar_III">al III° tasto</string>
    <string name="action_trabar_IV">al IV° tasto</string>
    <string name="action_trabar_V">al V° tasto</string>
    <string name="action_trabar_VI">al VI° tasto</string>
    <string name="action_trabar_VII">al VII° tasto</string>
    <string name="showcase_tonalita_desc">Da questo men&#249; puoi gestire il cambio tonalit&#224; con le seguenti funzioni:</string>
   	<string name="showcase_barre_desc">Da questo men&#249; puoi gestire il cambio barr&#232; con le seguenti funzioni:</string>
	<string name="showcase_chbarre_desc">Imposta il barr&#232; al tasto desiderato.</string>
    <string name="showcase_savebarre_desc">Salva il tasto a cui hai impostato il barr&#232;, in modo da averlo sempre ad ogni apertura del canto.</string>
    <string name="showcase_resbarre_desc">Fa tornare il barr&#232; al tasto predefinito nel Risuscit&#242;.</string>
    <string name="play_scroll">Avvia scroll</string>
    <string name="stop_scroll">Ferma scroll</string>
    <string name="applicatgion_theme_title">Tema</string>
    <string name="applicatgion_theme_summary">Cambia il tema dell\'applicazione. Attenzione: L\'applicazione sar&#224; riavviata.</string>
</resources>