<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:holo="http://schemas.android.com/apk/res-auto">
    
    <SwitchPreference
        android:key="screenOn"
        android:title="@string/always_on"
        android:summary="@string/always_on_summary"
        android:defaultValue="false"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"
        android:persistent="true" />
    
    <SwitchPreference
        android:key="showSecondaEucarestia"
        android:title="@string/show_seconda_title"
        android:summary="@string/show_seconda_summary"
        android:defaultValue="false"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"
        android:persistent="true" />

    <ListPreference 
        android:key="defaultIndex"
    	android:title="@string/default_index_title"
    	android:summary="@string/default_index_summary"
    	android:entries="@array/pref_default_index_entries"
    	android:entryValues="@array/pref_default_index_values"
    	android:defaultValue="0" />
    
   	<ListPreference 
        android:key="saveLocation"
    	android:title="@string/save_location_title"
    	android:summary="@string/save_location_summary"
    	android:defaultValue="0" />
    
   	<ListPreference 
        android:key="applicationTheme"
    	android:title="@string/applicatgion_theme_title"
    	android:summary="@string/applicatgion_theme_summary"
    	android:entries="@array/pref_default_theme_entries"
    	android:entryValues="@array/pref_default_theme_values"
    	android:defaultValue="0" />
   	
</PreferenceScreen>