<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_min_margin"
    android:paddingRight="@dimen/activity_min_margin"
    android:paddingTop="@dimen/activity_min_margin"
   	android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/advanced_search_subtitle"/>
    
    <EditText
        android:id="@+id/textfieldRicerca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignBaseline="@+id/button_pulisci"
	        android:layout_alignBottom="@+id/button_pulisci"
	        android:layout_alignParentLeft="true"
	        android:paddingLeft="@dimen/activity_min_margin"
	        android:text="@string/list_result_title" />

	   	<Button
	        android:id="@+id/button_search"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentTop="true"
	        android:gravity="center"
	        android:text="@string/button_search" />
	    
	    <Button
	        android:id="@+id/button_pulisci"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_toLeftOf="@id/button_search"
	        android:gravity="center"
	        android:text="@string/button_pulisci" />
	    


    </RelativeLayout>
    
    <TextView
        	android:id="@+id/search_no_results"
        	android:paddingTop="10dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/search_no_results"
	        android:visibility="gone" />
    
    <ListView 
        android:id="@+id/matchedList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>
