<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingLeft="@dimen/activity_min_margin"
    android:paddingRight="@dimen/activity_min_margin"
    android:paddingTop="@dimen/activity_min_margin"
   	android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/fast_search_subtitle"/>
    
    <EditText
        android:id="@+id/textfieldRicerca"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_marginBottom="@dimen/min_button_margin"
        android:layout_marginTop="@dimen/min_button_margin"
        android:layout_height="wrap_content">

	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerVertical="true"
	        android:layout_alignParentLeft="true"
	        android:paddingLeft="@dimen/activity_min_margin"
	        android:text="@string/list_result_title" />

		<FrameLayout
	    	android:id="@+id/frame_pulisci"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginRight="@dimen/min_button_margin"
        	android:layout_alignParentRight="true"
		    android:layout_alignParentTop="true">
	    
		    <Button
		        android:id="@+id/button_pulisci"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:text="@string/button_pulisci" />
	    
	    	<com.indris.material.RippleView
            	android:id="@+id/pulisci_ripple"
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	ripple:alphaFactor="8.0"
            	ripple:rippleColor="?attr/customLightColor" />

	    </FrameLayout>
	    	
    </RelativeLayout>
    
    <TextView
        	android:id="@+id/search_no_results"
        	android:paddingTop="10dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center"
	        android:text="@string/search_no_results"
	        android:visibility="gone" />
    
    <ListView 
        android:id="@+id/matchedList"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
